infrastructure/woodpecker/envoy-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: woodpecker
  namespace: envoy
spec:
  parentRefs:
    - name: main-gateway
      namespace: envoy
      sectionName: ci
  hostnames:
    - ci.dta32.my.id
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: woodpecker-server
          namespace: woodpecker
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-routes-to-woodpecker-services
  namespace: woodpecker
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: envoy
  to:
    - group: ""
      kind: Service
